flicker fix on safari

--- a/src/components/variantsInput/variantsInput.css
+++ b/src/components/variantsInput/variantsInput.css
@@ -34,6 +34,8 @@
   width: 1.5rem;
   height: 1.5rem;
   border-radius: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   position: absolute;
   background-color: inherit;
   content: "";
